--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.1.6",
+    "@vue/compat": "3.3.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.7",
     "moment": "^2.30.1",
     "portal-vue": "^3.0.0-beta.0",
-    "vue": "^3.5.13",
+    "vue": "3.3.4",
     "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.30.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.9",
     "vite": "^6.0.5",
