--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.30.0",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.9",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8"
   }
