--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "moment": "^2.30.1",
     "portal-vue": "^3.0.0-beta.0",
     "vue": "3.3.4",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
